[package]
name = "flynny_viz_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2", features = [ "default" ] }
env_logger = { version = "0.10", default-features = false, features = [ "auto-color", "humantime" ] }
egui_extras = { version = "0.27.2", features = [ "default", "all_loaders" ]}
image = { version = "0.24", features = [ "jpeg", "png", "gif", "webp"] } # image version must match the one used by egui
rfd = "0.13"